--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     </style>
 </head>
 <body>
-    <div id="countdown-title" class="countdown-title">倒數至 114年會考</div>
+    <div id="countdown-title" class="countdown-title">準備迎接2025年的月考啦!! 加油!!</div>
     <div class="circles-container">
         <div class="circle-item">
             <div class="circle-progress">
