--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
             const examEndFinal = examEndDay2;
 
             let timeDiff;
-            let titleText = '倒數至 114年會考';
+            let titleText = '準備迎接2025年的會考囉! 加油! 祝你考到好高中!';
 
             if (now >= examStartDay1 && now < examEndDay1) {
                 titleText = '正在進行考試 (第一天)';
